cache for all VM types

--- a/virtual/network/Vagrantfile
+++ b/virtual/network/Vagrantfile
@@ -55,6 +55,8 @@ Vagrant.configure(2) do |config|
         node.memory = 512
       end
       node.vm.box = base_box
+      cache_dir = local_cache(node.vm.box)
+      node.vm.synced_folder cache_dir, "/var/cache/apt/archives", create:true 
       node.vm.box_download_insecure = true
       node.vm.network "private_network", virtualbox__intnet: "tor1_spine#{i}",
        auto_config: false
@@ -76,6 +78,8 @@ Vagrant.configure(2) do |config|
           node.name = "hv#{i}"
         end
         node.vm.box = base_box
+        cache_dir = local_cache(node.vm.box)
+        node.vm.synced_folder cache_dir, "/var/cache/apt/archives", create:true 
         node.vm.box_download_insecure = true
         node.vm.network "private_network", virtualbox__intnet: "tor#{i}_hv",
            auto_config: false
