--- a/virtual/Vagrantfile
+++ b/virtual/Vagrantfile
@@ -15,6 +15,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+
+def local_cache(basebox_name)
+  #homed = Vagrant::Environment.new.home_path
+  homed = '~/.vagrant.d'
+  cache_dir = File.join(homed, 'cache', 'apt', basebox_name)
+end
+
+
 require 'yaml'
 
 topology = './topology/topology.yml'
@@ -32,9 +40,11 @@ Vagrant.configure('2') do |config|
   config.vm.box = 'bento/ubuntu-18.04'
   config.vm.box_download_insecure = true
 
+  cache_dir = local_cache(config.vm.box)
+  config.vm.synced_folder cache_dir, "/var/cache/apt/archives", create:true 
+
   topology['nodes'].each do |node|
     vm_name = node['host']
-
     # get hardware profile for node
     hw_profiles = hardware['profiles']
     hw_profile = hw_profiles[node['hardware_profile']]
