--- a/ansible/playbooks/roles/chef-workstation/tasks/upload-extra-cookbook.yml
+++ b/ansible/playbooks/roles/chef-workstation/tasks/upload-extra-cookbook.yml
@@ -1,4 +1,5 @@
-- set_fact:
+- name: set file fact
+  set_fact:
     cookbook_file: "{{ item.file_asset | find_asset(all_file_assets) }}"
 
 - name: upload external cookbook
