--- a/ansible/playbooks/roles/common/tasks/configure-apt.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-apt.yml
@@ -2,6 +2,4 @@
   template:
     src: apt/proxy.j2
     dest: /etc/apt/apt.conf.d/proxy
-  when:
-    - proxy
-    - proxy['enabled'] == true
+  when: proxy is defined and proxy['enabled']
