--- a/ansible/playbooks/roles/headnode/tasks/register-compute-nodes.yml
+++ b/ansible/playbooks/roles/headnode/tasks/register-compute-nodes.yml
@@ -5,6 +5,7 @@
 - name: enable compute service
   changed_when: false
   shell: |
+    set -o pipefail
     set -xe
     # get the status of all nova-compute servies in json format
     services=$(openstack compute service list \
