--- a/virtual/network/Vagrantfile
+++ b/virtual/network/Vagrantfile
@@ -1,38 +1,33 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
-base_box = "bento/ubuntu-18.04"
+base_box = 'bento/ubuntu-18.04'
 
 def setup_proxy(node)
   http_proxy  = ENV['http_proxy']  || ''
   https_proxy = ENV['https_proxy'] || ''
   if http_proxy != ''
-    node.vm.provision "shell", path: "proxyconfig.sh",
-     args: [http_proxy, https_proxy]
+    node.vm.provision 'shell', path: 'proxyconfig.sh', args: [http_proxy, https_proxy]
   end
 end
 
 Vagrant.configure(2) do |config|
-
   if ENV['DEPLOY_NETWORK_VM'] == 'true'
 
-    config.vm.define "network" do |node|
-      config.vm.provider "virtualbox" do |node|
-        node.name = "network"
-        node.memory = 1024
+    config.vm.define 'network' do |node|
+      config.vm.provider 'virtualbox' do |vb|
+        vb.name = 'network'
+        vb.memory = 1024
       end
-      node.vm.hostname = "network"
+      node.vm.hostname = 'network'
       node.vm.box = base_box
       node.vm.box_download_insecure = true
 
-      node.vm.network "private_network", virtualbox__intnet: "management1",
-       auto_config: false
-      node.vm.network "private_network", virtualbox__intnet: "management2",
-       auto_config: false
-      node.vm.network "private_network", virtualbox__intnet: "management3",
-       auto_config: false
+      node.vm.network 'private_network', virtualbox__intnet: 'management1', auto_config: false
+      node.vm.network 'private_network', virtualbox__intnet: 'management2', auto_config: false
+      node.vm.network 'private_network', virtualbox__intnet: 'management3', auto_config: false
 
       setup_proxy(node)
-      node.vm.provision "shell", path: "provisioner.sh", args: 'network'
+      node.vm.provision 'shell', path: 'provisioner.sh', args: 'network'
     end
 
   else
@@ -40,24 +35,19 @@ Vagrant.configure(2) do |config|
     # Create 3 TORs
     (1..3).each do |i|
       config.vm.define "tor#{i}" do |node|
-        config.vm.provider "virtualbox" do |node|
-          node.name = "tor#{i}"
-          node.memory = 512
+        config.vm.provider 'virtualbox' do |vb|
+          vb.name = "tor#{i}"
+          vb.memory = 512
         end
         node.vm.box = base_box
         node.vm.box_download_insecure = true
-        node.vm.network "private_network", virtualbox__intnet: "tor#{i}_spine1",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "tor#{i}_spine2",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "tor#{i}_hv",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "management#{i}",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "storage#{i}",
-         auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor#{i}_spine1", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor#{i}_spine2", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor#{i}_hv", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "management#{i}", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "storage#{i}", auto_config: false
         setup_proxy(node)
-        node.vm.provision "shell", path: "provisioner.sh", args: "tor#{i}"
+        node.vm.provision 'shell', path: 'provisioner.sh', args: "tor#{i}"
         node.vm.hostname = "tor#{i}"
       end
     end
@@ -65,24 +55,20 @@ Vagrant.configure(2) do |config|
     # Create 2 spines
     (1..2).each do |i|
       config.vm.define "spine#{i}" do |node|
-        config.vm.provider "virtualbox" do |node|
-          node.name = "spine#{i}"
-          node.memory = 512
+        config.vm.provider 'virtualbox' do |vb|
+          vb.name = "spine#{i}"
+          vb.memory = 512
         end
         node.vm.box = base_box
         node.vm.box_download_insecure = true
-        node.vm.network "private_network", virtualbox__intnet: "tor1_spine#{i}",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "tor2_spine#{i}",
-         auto_config: false
-        node.vm.network "private_network", virtualbox__intnet: "tor3_spine#{i}",
-         auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor1_spine#{i}", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor2_spine#{i}", auto_config: false
+        node.vm.network 'private_network', virtualbox__intnet: "tor3_spine#{i}", auto_config: false
         setup_proxy(node)
-        node.vm.provision "shell", path: "provisioner.sh", args: "spine#{i}"
+        node.vm.provision 'shell', path: 'provisioner.sh', args: "spine#{i}"
         node.vm.hostname = "spine#{i}"
       end
     end
 
   end
-
 end
