updated ansible tasks to use /bin/bash as their shell

--- a/ansible/playbooks/roles/common/tasks/configure-networking.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-networking.yml
@@ -37,6 +37,8 @@
   shell: |
     set -o pipefail
     /usr/sbin/birdc show route | grep 0.0.0.0/0
+  args:
+    executable: /bin/bash
   retries: 30
   delay: 5
   register: result
