--- a/ansible/playbooks/roles/headnode/tasks/adjust-ceph-pool-pgs.yml
+++ b/ansible/playbooks/roles/headnode/tasks/adjust-ceph-pool-pgs.yml
@@ -54,3 +54,5 @@
         echo "pool: ${pool} (${target_pg_num} target pgs) (${pg_num} pgs)"
       fi
     done
+  args:
+    executable: /bin/bash
