added /etc/openstack/clouds.yml and virtual overrides (#1509)
* added /etc/openstack/clouds.yml and virtual overrides

  clouds.yml
    - added /etc/openstack/clouds.yml configuration file readable only by
      root and members of the operators group
    - Vagrantfile for virtual builds now supports overrides for
      hardware.yml and topology.yml (hardware.override.yml and
      topology.overirde.yml respectively)
    - .gitignore will ignore these override files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ chef/roles/storagenode.json
 chef/environments/
 chef/databags/
 virtual/files/ssh/id_*
+hardware.overrides.yml
+topology.overrides.yml
