Various fixes including `chef-client` upgrade & moving hardware packages out of build. (#1511)
* Upgrade chef-client to 14.6.47 as older 14.6.13 version is no longer available.

* Provide example virtual override files.

* Move `nvme-cli' & `smartmontools' out of the common packages to install.

--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -170,9 +170,9 @@ assets_files:
     filename: consul_1.4.0_linux_amd64.zip
 
   - name: chef_client
-    url: https://packages.chef.io/files/current/chef/14.6.13/ubuntu/18.04/chef_14.6.13-1_amd64.deb
-    checksum: sha256:d5e460938a1817de1e223348e234e9b34542c235a71132a9c1dc353c67c8f593
-    filename: chef_14.6.13-1_amd64.deb
+    url: https://packages.chef.io/files/stable/chef/14.6.47/ubuntu/18.04/chef_14.6.47-1_amd64.deb
+    checksum: sha256:81dc8634609493a8e9c9dbcb027855027812c902db95e1884b18fe368acbd047
+    filename: chef_14.6.47-1_amd64.deb
 
   - name: chef_server
     url: https://packages.chef.io/files/stable/chef-server/12.17.33/ubuntu/16.04/chef-server-core_12.17.33-1_amd64.deb
